tests/typing/fail/array_literal_fail2.rb

[1,true].at(1) + 2
